# marsho-cli

./: .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.github/workflows/: debug-build.yml  rust.yml
src/: commands.rs  config.yaml  main.rs  model_config.yaml
src/configs/: config.rs
src/handlers/: handler.rs
src/models/: client.rs  context.rs  message.rs  mod.rs
src/schemas/: models.rs
src/utils/: session.rs
