[package]
name = "marsho-cli"
version = "0.2.0"
edition = "2021"

[dependencies]
config = "0.13.1"
anyhow = "1.0"
serde_yaml = "0.9.33"
serde = {version = "1.0", features = ["derive"]}
reqwest = { version = "0.11", features = ["json"] }
url = "2.3"
tokio = { version = "1.0", features = ["full"]}
serde_json = "1.0.139"
colored = "2.0"